--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -1,3 +1,24 @@
 .settings-component {
   
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+body {
+  position: relative;
+}
+
+.footer-wrapper {
+  background-color: lightgray;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  text-align: right;
+}
