--- a/src/styles/SettingsBottomBar.css
+++ b/src/styles/SettingsBottomBar.css
@@ -1,7 +1,12 @@
 .settingsbottombar-component {
-  background: gray;
+  height: 100%;
+  padding: 9px;
   /*position: absolute;
   width: 100%;
   bottom: 0;
   padding: 10px;*/
+}
+
+.settingsbottombar-component button {
+  margin-left: 8px;
 }
