--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -7,11 +7,11 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 body {
   position: relative;
+  overflow: hidden;
 }
 
 .footer-wrapper {
@@ -21,4 +21,18 @@ body {
   width: 100%;
   height: 50px;
   text-align: right;
+}
+
+.configuration {
+  width: 40%;
+  height: calc(100vh - 50px);
+  overflow: auto;
+  float: left;
+}
+
+.preview {
+  float: left;
+  width: 60%;
+  background-color: red;
+  height: calc(100vh - 50px);
 }
